src/objects/CS_Software_Downloads__c.object
<CustomObject>
    <fields>
        <fullName>CS_Asset_Name__c</fullName>
        <formula>CS_Asset__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Software Downloads</relationshipLabel>
        <relationshipName>Software_Downloads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CS_Base_URL__c</fullName>
        <formula>CASE($User.ProfileId,$Setup.CS_Profile_Id__c.CS_Customer_Profile__c ,&quot;/customer/sfc/servlet.shepherd/version/download/&quot;,  $Setup.CS_Profile_Id__c.CS_Partner_Profile__c ,&quot;/GWPartners/sfc/servlet.shepherd/version/download/&quot;,&quot;/sfc/servlet.shepherd/version/download/&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Community Download base Url</inlineHelpText>
        <label>Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Document_Id__c</fullName>
        <label>Document Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Download__c</fullName>
        <formula>HYPERLINK(CS_Base_URL__c&amp;CS_File_Id__c 
&amp;&quot;?asPdf=false&amp;operationContext=CHATTER&quot;, 
IMAGE(Image_Url__c&amp;&quot;download&quot;, &quot;Download&quot;,10,10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Download</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_FileExtension__c</fullName>
        <label>FileExtension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_File_Id__c</fullName>
        <label>Version Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_File_Type__c</fullName>
        <label>File Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Product_Image__c</fullName>
        <formula>IMAGE(CASE(CS_Product__c, &quot;BillingCenter&quot;, &quot;/resource/Billing_Center&quot;,
&quot;PolicyCentre&quot;, &quot;/resource/Policy_Center&quot;,
&quot;ClaimsCenter&quot;, &quot;/resource/Claim_Center&quot;,
&quot;no image&quot;), &quot;Product&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Product_Release__c</fullName>
        <description>**** Used to display on Software download for customers****</description>
        <formula>CS_Release__r.Name</formula>
        <label>Product Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Product__c</fullName>
        <formula>BLANKVALUE(CS_Asset__r.Product2.Product__r.Name, CS_Asset__r.Product2.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Release_Type__c</fullName>
        <description>This field will be copied from CS_Release_Type__c on CS_Release__c object</description>
        <label>Release Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>CS_Release__c</referenceTo>
        <relationshipLabel>Software Downloads</relationshipLabel>
        <relationshipName>Software_Downloads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_View__c</fullName>
        <formula>HYPERLINK(CS_Document_Id__c, &quot;View&quot;)</formula>
        <inlineHelpText>Click to View the File</inlineHelpText>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Url__c</fullName>
        <formula>CASE($User.ProfileId, $Setup.CS_Profile_Id__c.CS_Customer_Profile__c,&quot;/customer/resource/&quot;,  $Setup.CS_Profile_Id__c.CS_Partner_Profile__c ,&quot;/GWPartners/resource/&quot;,&quot;/resource/&quot;)</formula>
        <label>Image Url</label>
        <type>Text</type>
    </fields>
    <label>Software Download</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CS_Release__c</columns>
        <columns>CS_Release_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CS_Download__c</columns>
        <columns>CS_Asset__c</columns>
        <columns>CS_Asset_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>CS_Product__c</columns>
        <columns>CS_Download__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ClaimsCenter</fullName>
        <columns>NAME</columns>
        <columns>CS_File_Type__c</columns>
        <columns>CS_Product__c</columns>
        <columns>CS_Download__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Claim</value>
        </filters>
        <label>ClaimsCenter</label>
    </listViews>
    <listViews>
        <fullName>ReleaseNotes</fullName>
        <columns>NAME</columns>
        <columns>CS_Product__c</columns>
        <columns>CS_Download__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_FileExtension__c</field>
            <operation>equals</operation>
            <value>PDF</value>
        </filters>
        <label>Release Notes</label>
    </listViews>
    <listViews>
        <fullName>Software</fullName>
        <columns>NAME</columns>
        <columns>CS_Product__c</columns>
        <columns>CS_Download__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_FileExtension__c</field>
            <operation>equals</operation>
            <value>EXE</value>
        </filters>
        <label>Software</label>
    </listViews>
    <nameField>
        <label>Software Downloads Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Software Downloads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>